22version fixed the product did not display in the home/index page

--- a/app/views/home/index_original.html
+++ b/app/views/home/index_original.html
@@ -24,9 +24,6 @@
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic' rel='stylesheet' type='text/css'>
         <!--owl carousel css-->
         <link href="css/owl.carousel.css" rel="stylesheet" type="text/css" media="screen">
-        <!-- 12-11-2015 Cat Change Another Way link tag -->
-        <!--<%= stylesheet_link_tag '/owl.carousel.css', media='screen' %>-->
-        <!--End of Cat Change Another Way link tag-->
         <link href="css/owl.theme.css" rel="stylesheet" type="text/css" media="screen">
         <!--mega menu -->
         <link href="css/yamm.css" rel="stylesheet" type="text/css">
@@ -264,93 +261,117 @@
                 <!--Dog to see this way to show products is better. -->
                 <div class="col-md-12">
                     <div id="grid" class="row">
-                        <div class="col-sm-3 margin30">
+                        <div class="mix col-sm-3 page1 page4 margin30">
                             <div class="item-img-wrap ">
-                              <a href="#">
-                                <img src="<%= asset_path "img-1.jpg" %>" class="img-responsive" alt="working">
-                              </a>
+                                <img src="<%= asset_path "img-1.jpg" %>" class="img-responsive" alt="workimg">
+                                <div class="item-img-overlay">
+                                    <a href="#" class="show-image">
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
                             <div class="work-desc">
-                                <h3><a href="#"> Mobile App Deep Links</a></h3>
+                                <h3><a href="portfolio-single.html"> Mobile App Deep Links</a></h3>
                                 <span>$50 - $ 2000 / Bug</span>
                             </div><!--work desc-->
                         </div>
-                        <div class="col-sm-3 margin30">
+                        <div class="mix col-sm-3 page2 page3 margin30">
                             <div class="item-img-wrap ">
-                              <a href="#">
-                                <img src="<%= asset_path "img-2.jpg" %>" class="img-responsive" alt="working">
-                              </a>
+                                <img src="<%= asset_path "img-2.jpg" %>" class="img-responsive" alt="workimg">
+                                <div class="item-img-overlay">
+                                    <a href="#" class="show-image">
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
                             <div class="work-desc">
-                                <h3><a href="#"> Online Payment</a></h3>
+                                <h3><a href="portfolio-single.html"> Online Payment</a></h3>
                                 <span>$1000 / Bug</span>
                             </div><!--work desc-->
                         </div>
-                        <div class="col-sm-3 margin30 ">
+                        <div class="mix col-sm-3  page3 page2 margin30 ">
                             <div class="item-img-wrap ">
-                              <a href="#">
-                                <img src="<%= asset_path "img-3.jpg" %>" class="img-responsive" alt="working">
-                              </a>
+                                <img src="<%= asset_path "img-3.jpg" %>" class="img-responsive" alt="workimg">
+                                <div class="item-img-overlay">
+                                    <a href="#" class="show-image">
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
                             <div class="work-desc">
-                                <h3><a href="#"> Connect Mobile Data</a></h3>
+                                <h3><a href="portfolio-single.html"> Connect Mobile Data</a></h3>
                                 <span>$50 - $2000 / Bug</span>
                             </div><!--work desc-->
                         </div>
-                        <div class="col-sm-3 margin30">
+                        <div class="mix col-sm-3  page4 margin30">
                             <div class="item-img-wrap ">
-                              <a href="#">
-                                <img src="<%= asset_path "img-4.jpg" %>" class="img-responsive" alt="working">
-                              </a>
+                                <img src="<%= asset_path "img-4.jpg" %>" class="img-responsive" alt="workimg">
+                                <div class="item-img-overlay">
+                                    <a href="#" class="show-image">
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
                             <div class="work-desc">
-                                <h3><a href="#"> Weather Assistant</a></h3>
+                                <h3><a href="portfolio-single.html"> Weather Assistant</a></h3>
                                 <span>$50 - $2000 / Bug</span>
                             </div><!--work desc-->
                         </div>
-                        <div class="col-sm-3 margin30 ">
+                        <div class="mix col-sm-3 page1 margin30 ">
                             <div class="item-img-wrap ">
-                              <a href="#">
-                                <img src="<%= asset_path "img-5.jpg" %>" class="img-responsive" alt="working">
-                              </a>
+                                <img src="<%= asset_path "img-5.jpg" %>" class="img-responsive" alt="workimg">
+                                <div class="item-img-overlay">
+                                    <a href="#" class="show-image">
+                                        <span></span>
+                                    </a>
+                                </div>
                             </div>
                             <div class="work-desc">
-                                <h3><a href="#"> Fun Physics Learning</a></h3>
+                                <h3><a href="portfolio-single.html"> Fun Physics Learning</a></h3>
                                 <span>$50 - $2000 / Bug</span>
                             </div><!--work desc-->
                         </div>
-                        <div class="col-sm-3 margin30">
+                        <div class="mix col-sm-3  page2 margin30">
                              <div class="item-img-wrap ">
-                               <a href="#">
-                                    <img src="<%= asset_path "img-6.jpg" %>" class="img-responsive" alt="working">
-                               </a>
-                             </div>
-                             <div class="work-desc">
-                                 <h3><a href="#">E-Fashion Shopping</a></h3>
-                                 <span>$50 - $2000 / Bug</span>
-                             </div><!--work desc-->
+                                    <img src="<%= asset_path "img-6.jpg" %>" class="img-responsive" alt="workimg">
+                                    <div class="item-img-overlay">
+                                        <a href="#" class="show-image">
+                                            <span></span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="work-desc">
+                                    <h3><a href="portfolio-single.html">E-Fashion Shopping</a></h3>
+                                    <span>$50 - $2000 / Bug</span>
+                                </div><!--work desc-->
                         </div>
-                        <div class="col-sm-3 margin30">
+                        <div class="mix col-sm-3  page3 margin30">
                             <div class="item-img-wrap ">
-                               <a href="#">
-                                    <img src="<%= asset_path "img-7.jpg" %>" class="img-responsive" alt="working">
-                               </a>
-                             </div>
-                             <div class="work-desc">
-                                 <h3><a href="portfolio-single.html">Fast Financing </a></h3>
-                                 <span>$50 - $2000 / Bug</span>
-                             </div><!--work desc-->
+                                    <img src="<%= asset_path "img-7.jpg" %>" class="img-responsive" alt="workimg">
+                                    <div class="item-img-overlay">
+                                        <a href="img/img-7.jpg" class="show-image">
+                                            <span></span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="work-desc">
+                                    <h3><a href="portfolio-single.html">Fast Financing </a></h3>
+                                    <span>$50 - $2000 / Bug</span>
+                                </div><!--work desc-->
                         </div>
-                        <div class="col-sm-3 margin30">
+                        <div class="mix col-sm-3 page4  margin30">
                              <div class="item-img-wrap ">
-                                <a href="#">
-                                  <img src="<%= asset_path "img-8.jpg" %>" class="img-responsive" alt="working">
-                                </a>
-                             </div>
-                             <div class="work-desc">
-                                 <h3><a href="portfolio-single.html">Customized Shipping</a></h3>
-                                 <span>$50 - $2000 / Bug</span>
-                             </div><!--work desc-->
+                                    <img src="<%= asset_path "img-8.jpg" %>" class="img-responsive" alt="workimg">
+                                    <div class="item-img-overlay">
+                                        <a href="#" class="show-image">
+                                            <span></span>
+                                        </a>
+                                    </div>
+                                </div>
+                                <div class="work-desc">
+                                    <h3><a href="portfolio-single.html">Customized Shipping</a></h3>
+                                    <span>$50 - $2000 / Bug</span>
+                                </div><!--work desc-->
                         </div>
 
                     </div><!--#grid-->
