--- a/app/views/testpages/index_testpage.html.erb
+++ b/app/views/testpages/index_testpage.html.erb
@@ -34,3 +34,22 @@
 <!-- Placeholder to display the text info in the box>
 <input type="text" class="form-control" placeholder="Search">
 -->
+
+<!-- Cool Staff - item-img-overlay effect: when you click the picture, the picture will be exlarged
+
+<div class="mix col-sm-3 page1 margin30 ">
+    <div class="item-img-wrap ">
+        <img src="<%= asset_path "img-5.jpg" %>" class="img-responsive" alt="working">
+        <div class="item-img-overlay">
+            <a href="<%= asset_path "img-5.jpg" %>" class="show-image">
+                <span></span>
+            </a>
+        </div>
+    </div>
+    <div class="work-desc">
+        <h3><a href="portfolio-single.html"> Fun Physics Learning</a></h3>
+        <span>$50 - $2000 / Bug</span>
+    </div>
+</div>
+
+-->
